Server/MuchToDo/kubernetes/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: muchtodo
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
